--- a/ShopLite/ShopLite.csproj
+++ b/ShopLite/ShopLite.csproj
@@ -16,8 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\" />
-    <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\js\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
